--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
-    "next": "11.1.2",
+    "next": "^12.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.42.1",
@@ -18,7 +18,7 @@
   },
   "devDependencies": {
     "@types/node": "^16.10.2",
-    "@types/react": "^17.0.26",
+    "@types/react": "^17.0.49",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "typescript": "^4.4.3"
